# evalground

./: CMakeLists.txt  README.md  SPEC.md
src/: avaliacao.cpp  avaliacao.hpp  main.cpp  prompt_parser.cpp  prompt_parser.hpp
